# Open-PupilEXT

./: .gitignore  .gitmodules  CMakeLists.txt  PupilExt.qrc  README.md  Third_Party_Licenses.html  icon.icns  qt5.natvis  vcpkg.json
Community/: README.md
Microcontroller/STMNucleo_F767ZI/: LICENSE
Microcontroller/STMNucleo_F767ZI/src/: main.cpp
Misc/: Build_env_FAQ.md  CHANGELOG  Executable_arguments.md  LICENSE  Remote_control_commands.md
Misc/CMakeLists/: CMakeLists_Win.txt
Misc/Deployment_Helper_Mac/: Main.m
Misc/Deployment_dmg_Maker_Mac/: PupilEXT_dmg_background.odp  README  make_dmg_from_app.command
Misc/Experiment_Integration_Examples/PLR_Matlab_PTB3_R2019a_and_prior/: KbWait_c_esc.m  PLR_Matlab_PTB3_R2019a_and_prior.m  PupilEXT.m  PupilEXT_Test.m
Misc/Experiment_Integration_Examples/PLR_Matlab_PTB3_R2019b_and_later/: KbWait_c.m  PLR_Matlab_PTB3_R2019b_and_later.m  PupilEXT.m  PupilEXT_Test.m
Misc/Experiment_Integration_Examples/PLR_PsychoPy_Builder/: PLR_PsychoPy_Builder.psyexp  PupilEXT.py  PupilEXT_Test.py  README
Misc/IR_PCB/: 2x2 Platine.brd  2x2 Platine.sch
Misc/Matlab_Pupil_Data_Evaluation/: Main.m  Test.m
Misc/Matlab_Pupil_Data_Evaluation/00_Data/Marker_Tables/: Marker_09_08_2020_17_10_A_Babak_Zandi_Const_Luminance_Quasi.mat  (+5 more)
Misc/Matlab_Pupil_Data_Evaluation/01_Methods/: PupilEXT_Preprocessing.m  Struct_to_Long.m  get_Pupil_Data_at.m
Misc/Matlab_Test_Image_Set_Synthesizer/: LICENSE  README.MD  SET_DEFAULTS.m  TEST_IMAGE_SET_GENERATOR.m  support_drawCircleInImage.m  support_fillCheckerPatternInImage.m  support_joinImages.m  support_makeCalibImages.m  support_makeFolderIfDoesntExist.m  support_makeTestImages.m  support_moveXMLsIfExist.m  support_putTextInImage.m  support_wipeFolderIfExists.m
Misc/Microcontroller/Arduino_Uno/: Arduino_Uno.ino
Misc/Microcontroller/Arduino_Uno_Ethernet/: Arduino_Uno_Ethernet.ino  LICENSE
Misc/Microcontroller/STMNucleo_F767ZI/: platformio.ini
Misc/Microcontroller/STMNucleo_L432KC/: platformio.ini
Misc/Templates_CMakeList/: CMakeLists_MAC.txt  CMakeLists_Standard.txt
PupilEXT/: CMakeLists.txt  LICENSE  PupilExt.qrc  PupilExt.rc  README.md
PupilEXT/cmake/: FindPylon.cmake
PupilEXT/singleeyefitter/singleeyefitter/: cvx.h
PupilEXT/src/: CMakeLists.txt  cameraCalibration.cpp  imageReader.cpp  imageReader.h  imageWriter.cpp  main.cpp  mainwindow.cpp  mainwindow.h  pupilDetection.cpp  signalPubSubHandler.h
PupilEXT/src/devices/: camera.h  fileCamera.cpp  fileCamera.h  hardwareTriggerConfiguration.h  singleCamera.h  singleCameraImageEventHandler.cpp  singleCameraImageEventHandler.h  stereoCamera.cpp  stereoCamera.h
PupilEXT/src/pupil-detection-methods/: ElSe.cpp  ElSe.h  ExCuSe.cpp  PuReST.cpp  Pupil.h  PupilDetectionMethod.cpp  Starburst.h  Swirski2D.cpp  Swirski2D.h  Swirski3D.cpp
PupilEXT/src/subwindows/: ResizableRectItem.cpp  RestorableQMdiSubWindow.h  calibrationHelpDialog.cpp  generalSettingsDialog.h  gettingsStartedWizard.cpp  graphPlot.h  pupilDetectionSettingsDialog.cpp  serialSettingsDialog.cpp  singleCameraSettingsDialog.cpp  singleCameraSharpnessView.cpp  singleCameraSharpnessView.h  singleCameraView.cpp  singleCameraView.h  singleFileCameraCalibrationView.cpp  stereoCameraView.cpp  stereoFileCameraCalibrationView.cpp  subjectSelectionDialog.h  videoView.cpp
PupilEXT/src/subwindows/pupil-detection-methods/: PupilMethodSetting.h  StarburstSettings.h  json.h
cmake/: FindPylon.cmake
singleeyefitter/singleeyefitter/: Ellipse.h
src/: CMakeLists.txt  PRGmainwindow.cpp  SVGIconColorAdjuster.h  camImageRegionsWidget.cpp  camImageRegionsWidget.h  camTempMonitor.cpp  camTempMonitor.h  cameraCalibration.cpp  cameraCalibration.h  cameraFrameRateCounter.h  connPool.h  connPoolCOM.h  connPoolUDP.h  dataStreamer.cpp  dataStreamer.h  dataTypes.cpp  dataTypes.h  dataWriter.cpp  dataWriter.h  execArgParser.cpp  execArgParser.h  eyeDataSerializer.cpp  eyeDataSerializer.h  frameRateCounter.h  imageReader.cpp  imageReader.h  imageWriter.cpp  imageWriter.h  main.cpp  mainwindow.cpp  mainwindow.h  metaSnapshotOrganizer.cpp  metaSnapshotOrganizer.h  playbackSynchroniser.cpp  playbackSynchroniser.h  pupilDetection.cpp  pupilDetection.h  recEventTracker.cpp  recEventTracker.h  sharpnessCalculation.cpp  (+4 more)
src/devices/: camera.h  cameraConfigurationEventHandler.h  fileCamera.cpp  fileCamera.h  hardwareTriggerConfiguration.h  singleCamera.cpp  singleCamera.h  singleCameraImageEventHandler.cpp  singleCameraImageEventHandler.h  singleWebcam.cpp  singleWebcam.h  singleWebcamImageEventHandler.cpp  singleWebcamImageEventHandler.h  softwareTriggerConfiguration.h  stereoCamera.cpp  stereoCamera.h  stereoCameraImageEventHandler.cpp  stereoCameraImageEventHandler.h
src/pupil-detection-methods/: ElSe.cpp  ExCuSe.cpp  ExCuSe.h  PuRe.cpp  PuRe.h  PuReST.cpp  PuReST.h  PupilDetectionMethod.cpp  PupilDetectionMethod.h  Starburst.cpp  Starburst.h  Swirski2D.cpp  Swirski3D.cpp  Swirski3D.h
src/subwindows/: IPCtrl.cpp  IPCtrl.h  MCUSettingsDialog.cpp  MCUSettingsDialog.h  ResizableRectItem.cpp  ResizableRectItem.h  RestorableQMdiSubWindow.h  calibrationHelpDialog.h  cameraView.cpp  cameraView.h  dataTable.cpp  dataTable.h  generalSettingsDialog.cpp  generalSettingsDialog.h  gettingStartedWizard.cpp  gettingStartedWizard.h  gettingsStartedWizard.cpp  gettingsStartedWizard.h  graphPlot.cpp  graphPlot.h  imageGraphicsItem.h  imagePlaybackControlDialog.cpp  imagePlaybackControlDialog.h  outputDataRuleDialog.cpp  outputDataRuleDialog.h  playbackDial.h  playbackSlider.h  pupilDetectionSettingsDialog.cpp  pupilDetectionSettingsDialog.h  remoteCCDialog.cpp  remoteCCDialog.h  sceneImageView.cpp  sceneImageView.h  sceneImageWidget.cpp  sceneImageWidget.h  serialSettingsDialog.cpp  serialSettingsDialog.h  singleCameraCalibrationView.cpp  singleCameraCalibrationView.h  singleCameraSettingsDialog.cpp  (+27 more)
src/subwindows/pupil-detection-methods/: ElSeSettings.h  ExCuSeSettings.h  PuReSTSettings.h  PuReSettings.h  PupilMethodSetting.h  StarburstSettings.h  Swirski2DSettings.h
src/subwindows/qcustomplot/: qcustomplot.cpp
(+45 files in other folders)
